--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
-
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
-
-/* Importing Bootstrap Icons CSS file. */
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
+@import './app/shared/styles/vendor';
