--- a/src/app/core/components/nav-item/nav-item.component.html
+++ b/src/app/core/components/nav-item/nav-item.component.html
@@ -1,9 +1,10 @@
 <a
-  class="nav-link"
+  class="nav-link d-flex align-items-center"
   [routerLink]="item.link"
-  routerLinkActive="active"
+  routerLinkActive="active active-bg-adaptive"
   [routerLinkActiveOptions]="{ exact: true }"
   (click)="onMenuItemSelected()"
 >
+  <i class="bi {{ item.icon }} me-2 fs-5"></i>
   {{ item.label }}
 </a>
