--- a/src/app/core/components/top-bar/top-bar.component.html
+++ b/src/app/core/components/top-bar/top-bar.component.html
@@ -1,26 +1,33 @@
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg bg-light-adaptive">
+  <div class="container-fluid navbar-container">
+    <a class="navbar-brand" [routerLink]="['/']">
+      Gestor de tareas
+    </a>
     <button
       class="navbar-toggler"
       type="button"
       aria-label="Abrir/cerrar menú"
-      (click)="isMenuCollapsed = !isMenuCollapsed"
+      (click)="toggleMenu()"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse d-lg-flex justify-content-lg-between" [ngbCollapse]="isMenuCollapsed">
+    <div class="collapse navbar-collapse d-lg-flex justify-content-lg-between pt-3 pt-lg-0" [ngbCollapse]="isMenuCollapsed">
       <div></div>
-      <ul class="navbar-nav">
+      <ul class="navbar-nav navbar-items gap-3 d-lg-flex align-items-lg-center">
         @for (item of menuItems; track $index) {
           <li class="nav-item">
-            <app-nav-item [item]="item" (menuItemSelected)="isMenuCollapsed = true"></app-nav-item>
+            <app-nav-item [item]="item" (menuItemSelected)="onMenuItemSelected()" />
           </li>
         }
       </ul>
-      <div class="d-flex">
-        <button class="btn btn-outline-success me-2" type="button">Login</button>
-        <button class="btn btn-success" type="button">Sign-up</button>
+      <div class="d-flex flex-column flex-lg-row align-items-lg-center">
+        <hr class="d-lg-none flex-grow-1 flex-lg-grow-0 mb-1" />
+        <div class="d-flex justify-content-end gap-3">
+          <button class="btn btn-outline d-flex align-items-center" type="button" aria-label="Abrir configuración">
+            <i class="bi bi-gear fs-5"></i>
+            <span class="d-inline d-lg-none ms-2">Configuración</span>
+          </button>
+        </div>
       </div>
     </div>
   </div>
