--- a/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/src/app/core/layouts/main-layout/main-layout.component.html
@@ -1,2 +1,5 @@
-<app-top-bar />
-<router-outlet />
+<app-top-bar></app-top-bar>
+<main class="container py-4">
+  <h1>test</h1>
+  <router-outlet></router-outlet>
+</main>
