feat: update top navigation bar component

--- a/src/app/core/components/top-bar/top-bar.component.html
+++ b/src/app/core/components/top-bar/top-bar.component.html
@@ -23,7 +23,12 @@
       <div class="d-flex flex-column flex-lg-row align-items-lg-center">
         <hr class="d-lg-none flex-grow-1 flex-lg-grow-0 mb-1" />
         <div class="d-flex justify-content-end align-items-center">
-          <button class="btn btn-outline d-flex align-items-center" type="button" aria-label="Abrir configuración">
+          <button
+            class="btn btn-outline d-flex align-items-center"
+            type="button"
+            aria-label="Abrir configuración"
+            (click)="openSettingsDialog()"
+          >
             <i class="bi bi-gear fs-5"></i>
           </button>
           <div class="d-flex align-items-center custom-rule ms-1 me-1">
