style: update app styles and layout

--- a/src/app/core/components/nav-item/nav-item.component.html
+++ b/src/app/core/components/nav-item/nav-item.component.html
@@ -2,7 +2,7 @@
   class="nav-link d-flex align-items-center"
   [routerLink]="item.link"
   routerLinkActive="active active-bg-adaptive"
-  [routerLinkActiveOptions]="{ exact: true }"
+  [routerLinkActiveOptions]="{ exact: false }"
   (click)="onMenuItemSelected()"
 >
   <i class="bi {{ item.icon }} me-2 fs-5"></i>
