--- a/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/src/app/core/layouts/main-layout/main-layout.component.html
@@ -1,4 +1,4 @@
 <app-top-bar></app-top-bar>
-<main class="container py-4">
+<main class="container main-content-wrapper py-4 px-4 px-sm-5">
   <router-outlet></router-outlet>
 </main>
