--- a/src/app/shared/styles/_vendor.scss
+++ b/src/app/shared/styles/_vendor.scss
@@ -1,31 +1,2 @@
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
-
-/* Importing Bootstrap Icons CSS file. */
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
-
-.bg-light-adaptive {
-  background-color: $gray-100;
-}
-
-.border-light-adaptive {
-  border-color: $gray-600;
-}
-
-.active-bg-adaptive {
-  background-color: $gray-200;
-}
-
-@include color-mode(dark) {
-  .bg-light-adaptive {
-    background-color: $gray-800;
-  }
-
-  .border-light-adaptive {
-    border-color: $gray-200;
-  }
-
-  .active-bg-adaptive {
-    background-color: $gray-600;
-  }
-}
+@import './bootstrap';
+@import './toastr';
