--- a/src/app/shared/components/list-item/list-item.component.html
+++ b/src/app/shared/components/list-item/list-item.component.html
@@ -1,6 +1,6 @@
 <div
   [ngClass]="{
-    'border-start border-end border-bottom px-4 py-3 bg-light-adaptive': true,
+    'border-start border-end border-bottom px-4 py-3 bg-subtle-adaptive': true,
     'border-top rounded-top-3': isFirst,
     'rounded-bottom-3': isLast
   }">
