--- a/src/app/shared/styles/_bootstrap.scss
+++ b/src/app/shared/styles/_bootstrap.scss
@@ -4,8 +4,14 @@
 /* Importing Bootstrap Icons CSS file. */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 
+$gray-50: #fafafb !default;
+
 .bg-light-adaptive {
   background-color: $gray-100;
+}
+
+.bg-subtle-adaptive {
+  background-color: $gray-50;
 }
 
 .border-light-adaptive {
@@ -23,6 +29,11 @@
 @include color-mode(dark) {
   .bg-light-adaptive {
     background-color: $gray-800;
+  }
+
+  $gray-850: #25282c !default;
+  .bg-subtle-adaptive {
+    background-color: $gray-850;
   }
 
   .border-light-adaptive {
