feat: add change task status option

--- a/src/app/features/tasks/pages/task-form/task-form.component.html
+++ b/src/app/features/tasks/pages/task-form/task-form.component.html
@@ -25,7 +25,7 @@
         type="checkbox"
         formControlName="completed"
       />
-      <label class="form-label">Completado</label>
+      <label class="form-label">Completada</label>
       @if (hasFieldErrors("name")) {
         <div class="form-text text-danger">
           {{ getFieldError("name") }}
