feat: add go back option on detail pages

--- a/src/app/features/categories/pages/category-detail/category-detail.component.html
+++ b/src/app/features/categories/pages/category-detail/category-detail.component.html
@@ -5,15 +5,21 @@
   </h2>
 
   @if (category) {
-    <div class="d-flex justify-content-end gap-3">
-      <button type="button" class="btn btn-outline-primary" (click)="editCategory()">
-        <i class="bi bi-pencil"></i>
-        <span class="ms-2">Editar</span>
+    <div class="d-flex justify-content-between gap-3 mb-2">
+      <button type="button" class="btn btn-outline-secondary" (click)="goBack()">
+        <i class="bi bi-arrow-left"></i>
+        <span class="ms-2">Volver</span>
       </button>
-      <button type="button" class="btn btn-outline-danger" (click)="confirmDeleteCategory()">
-        <i class="bi bi-trash"></i>
-        <span class="ms-2">Eliminar</span>
-      </button>
+      <div class="d-flex justify-content-end gap-3">
+        <button type="button" class="btn btn-outline-primary" (click)="editCategory()">
+          <i class="bi bi-pencil"></i>
+          <span class="ms-2">Editar</span>
+        </button>
+        <button type="button" class="btn btn-outline-danger" (click)="confirmDeleteCategory()">
+          <i class="bi bi-trash"></i>
+          <span class="ms-2">Eliminar</span>
+        </button>
+      </div>
     </div>
 
     <div class="d-flex flex-column gap-4">
