--- a/src/app/features/tasks/pages/task-detail/task-detail.component.html
+++ b/src/app/features/tasks/pages/task-detail/task-detail.component.html
@@ -8,16 +8,16 @@
     <div class="d-flex justify-content-between gap-3 mb-2">
       <button type="button" class="btn btn-outline-secondary" (click)="goBack()">
         <i class="bi bi-arrow-left"></i>
-        <span class="ms-2">Volver</span>
+        <span class="d-none d-sm-inline ms-2">Volver</span>
       </button>
       <div class="d-flex justify-content-end gap-3">
         <button type="button" class="btn btn-outline-primary" (click)="editTask()">
           <i class="bi bi-pencil"></i>
-          <span class="ms-2">Editar</span>
+          <span class="d-none d-sm-inline ms-2">Editar</span>
         </button>
         <button type="button" class="btn btn-outline-danger" (click)="confirmDeleteTask()">
           <i class="bi bi-trash"></i>
-          <span class="ms-2">Eliminar</span>
+          <span class="d-none d-sm-inline ms-2">Eliminar</span>
         </button>
       </div>
     </div>
