--- a/src/app/features/tasks/components/task-item/task-item.component.html
+++ b/src/app/features/tasks/components/task-item/task-item.component.html
@@ -1,15 +1,15 @@
-<app-list-item  [isFirst]="isFirst" [isLast]="isLast">
-  <div class="d-flex justify-content-between align-items-center gap-4">
-    <div class="d-flex align-items-center gap-2">
+<app-list-item [isFirst]="isFirst" [isLast]="isLast">
+  <div class="d-flex flex-column justify-content-between align-items-center gap-3">
+    <div class="d-grid gap-3 w-100">
       <input
         type="checkbox"
-        class="form-check-input m-0 me-2 fs-5"
+        class="form-check-input m-0 fs-5"
         [checked]="task.completed"
         (change)="changeTaskStatus()"
         ngbTooltip="Marcar como {{ task.completed ? 'pendiente' : 'completada' }}"
-      >
-      <span class="text-truncate">{{ task.name }}</span>
-      <span class="badge rounded-pill text-bg-secondary">{{ task.category.name }}</span>
+      />
+      <div class="text-ellipsis-grow">{{ task.name }}</div>
+      <span class="badge rounded-pill text-bg-secondary text-ellipsis-fixed">{{ task.category.name }}</span>
     </div>
     <div class="d-flex gap-3">
       <ng-content></ng-content>
