--- a/src/app/features/tasks/components/task-item/task-item.component.html
+++ b/src/app/features/tasks/components/task-item/task-item.component.html
@@ -9,7 +9,12 @@
         ngbTooltip="Marcar como {{ task.completed ? 'pendiente' : 'completada' }}"
       />
       <div class="text-ellipsis-grow">{{ task.name }}</div>
-      <span class="badge rounded-pill text-bg-secondary text-ellipsis-fixed">{{ task.category.name }}</span>
+      <button
+        class="btn badge rounded-pill text-bg-secondary text-ellipsis-fixed"
+        (click)="viewCategoryDetail()"
+      >
+        {{ task.category.name }}
+      </button>
     </div>
     <div class="d-flex gap-3">
       <ng-content></ng-content>
