feat: update search filters for tasks

--- a/src/app/features/tasks/pages/task-list/task-list.component.html
+++ b/src/app/features/tasks/pages/task-list/task-list.component.html
@@ -4,15 +4,49 @@
     Tareas
   </h2>
 
-  <div class="d-flex justify-content-between gap-3">
-    <form class="d-flex gap-3" [formGroup]="filterForm">
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Buscar categoría"
-        aria-label="Buscar categoría"
-        formControlName="name"
-      />
+  <div class="d-flex justify-content-between align-items-start gap-3">
+    <form class="d-flex flex-column gap-2" [formGroup]="filterForm">
+      <div class="d-flex gap-3">
+        <input type="text" class="form-control" placeholder="Buscar categoría" aria-label="Buscar categoría"
+          formControlName="name" />
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          (click)="collapse.toggle()"
+          [attr.aria-expanded]="!isAdvancedFilterCollapsed">
+          <i class="bi bi-funnel"></i>
+        </button>
+      </div>
+      <div>
+        <button
+          type="button"
+          class="btn btn-link link-danger text-decoration-none fs-6 p-0"
+          (click)="clearFilter()"
+        >
+          Limpiar filtros
+        </button>
+      </div>
+      <div #collapse="ngbCollapse" [(ngbCollapse)]="isAdvancedFilterCollapsed">
+        <div class="d-flex flex-column gap-3 bg-subtle-adaptive p-3 rounded-3">
+          <div class="mb-2">
+            <label for="state" class="form-label">Estado</label>
+            <select class="form-select" formControlName="state">
+              @for (state of states; track $index) {
+              <option [value]="state.value">{{ state.label }}</option>
+              }
+            </select>
+          </div>
+          <div class="mb-2">
+            <label for="categoryId" class="form-label">Categoría</label>
+            <select class="form-select" formControlName="categoryId">
+              @for (category of categoriesOptions | async; track $index) {
+              <option [value]="category.value">{{ category.label }}</option>
+              }
+            </select>
+          </div>
+        </div>
+
+      </div>
     </form>
     <button type="button" class="btn btn-primary" (click)="addTask()">
       <i class="bi bi-plus-lg"></i>
@@ -22,48 +56,38 @@
 
   <ul class="d-flex flex-column list-unstyled">
     @for (item of tasks$ | async; track $index; let isFirst = $first; let isLast = $last) {
-      <li>
-        <app-task-item
-          [task]="item"
-          [isFirst]="isFirst"
-          [isLast]="isLast"
-          (statusChanged)="onChangeTaskStatus($event)"
-        >
-          <div class="d-flex gap-3">
-            <button type="button" class="btn btn-outline-primary" (click)="viewTask(item.id)">
-              <i class="bi bi-eye"></i>
-            </button>
-            <button type="button" class="btn btn-outline-secondary" (click)="editTask(item.id)">
-              <i class="bi bi-pencil"></i>
-            </button>
-            <button type="button" class="btn btn-outline-danger" (click)="confirmDeleteTask(item.id)">
-              <i class="bi bi-trash"></i>
-            </button>
-          </div>
-        </app-task-item>
-      </li>
+    <li>
+      <app-task-item [task]="item" [isFirst]="isFirst" [isLast]="isLast" (statusChanged)="onChangeTaskStatus($event)">
+        <div class="d-flex gap-3">
+          <button type="button" class="btn btn-outline-primary" (click)="viewTask(item.id)">
+            <i class="bi bi-eye"></i>
+          </button>
+          <button type="button" class="btn btn-outline-secondary" (click)="editTask(item.id)">
+            <i class="bi bi-pencil"></i>
+          </button>
+          <button type="button" class="btn btn-outline-danger" (click)="confirmDeleteTask(item.id)">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
+      </app-task-item>
+    </li>
     }
     @empty {
-      <li>
-        <app-list-item>
-          <div class="d-flex justify-content-center align-items-center">
-           <span class="text-muted">No se encontraron tareas</span>
-          </div>
-        </app-list-item>
-      </li>
+    <li>
+      <app-list-item>
+        <div class="d-flex justify-content-center align-items-center">
+          <span class="text-muted">No se encontraron tareas</span>
+        </div>
+      </app-list-item>
+    </li>
     }
   </ul>
 
 </div>
 
 <ng-template #confirmDeletion let-activeModal>
-  <app-confirmation-dialog
-    [activeModal]="activeModal"
-    title="Eliminar tarea"
-    (cancel)="cancelSelection()"
-    (confirm)="deleteTask()"
-    [danger]="true"
-  >
+  <app-confirmation-dialog [activeModal]="activeModal" title="Eliminar tarea" (cancel)="cancelSelection()"
+    (confirm)="deleteTask()" [danger]="true">
     ¿Está seguro que desea eliminar la tarea?
   </app-confirmation-dialog>
 </ng-template>
