feat: update settings dialog

--- a/src/app/shared/components/settings-dialog/settings-dialog.component.html
+++ b/src/app/shared/components/settings-dialog/settings-dialog.component.html
@@ -27,7 +27,7 @@
         API Key de OpenAI
       </label>
       <input
-        type="text"
+        type="password"
         class="form-control"
         id="openAIApiKey"
         formControlName="openAIApiKey"
