--- a/src/app/features/ai/pages/ai-assistant/ai-assistant.component.html
+++ b/src/app/features/ai/pages/ai-assistant/ai-assistant.component.html
@@ -8,37 +8,31 @@
   <form [formGroup]="assistantForm" class="d-flex flex-column gap-3">
 
     <div>
-      <textarea
-        class="form-control"
-        formControlName="description"
-        placeholder="Escribe algo..."
-        rows="5"
-      ></textarea>
+      <textarea class="form-control" formControlName="description" placeholder="¿Qué planeas hacer?"
+        rows="5"></textarea>
       @if (hasFieldErrors("description")) {
-        <div class="form-text text-danger">
-          {{ getFieldError("description") }}
-        </div>
+      <div class="form-text text-danger">
+        {{ getFieldError("description") }}
+      </div>
       }
     </div>
 
     <div class="d-flex justify-content-end gap-3">
       @if (generatedTasks && generatedTasks.length > 0) {
-        <button
-          class="btn btn-primary"
-          type="button"
-          (click)="discardTasks()"
-        >
-          Descartar todo
-        </button>
+      <button class="btn btn-primary" type="button" (click)="discardTasks()">
+        Descartar todo
+      </button>
       }
       @else {
-        <button
-          class="btn btn-primary"
-          type="button"
-          (click)="generateTasks()"
-        >
-          Generar
-        </button>
+      <div class="d-flex gap-3 justify-content-between w-100">
+        <app-suggestions-list (suggestionSelected)="handleSuggestion($event)" />
+        <div class="d-flex align-items-start gap-3">
+          <button class="btn btn-primary" type="button" (click)="generateTasks()">
+            Generar
+          </button>
+        </div>
+      </div>
+
       }
     </div>
 
@@ -47,47 +41,47 @@
 
   <!-- Loader -->
   @if (showLoader) {
-    <div class="d-flex justify-content-center">
-      <div class="lottie-container">
-        <app-lottie-animation animation="assets/sparkles.json" />
-      </div>
+  <div class="d-flex justify-content-center">
+    <div class="lottie-container">
+      <app-lottie-animation animation="assets/sparkles.json" />
     </div>
+  </div>
   }
 
   <!-- Tasks -->
   @if (!showLoader && generatedTasks) {
-    <ul class="d-flex flex-column list-unstyled">
-      @for (item of generatedTasks; track i; let i = $index; let first = $first; let last = $last) {
-        <li>
-          <app-list-item [isFirst]="first" [isLast]="last">
-            <div class="d-flex flex-column justify-content-between align-items-center gap-3">
-              <div class="d-flex justify-content-start w-100">
-                <div class="text-truncate">{{ item }}</div>
-              </div>
-              <div class="d-flex gap-3">
-                <button type="button" class="btn btn-outline-primary" (click)="saveTask(i)">
-                  <i class="bi bi-check"></i>
-                </button>
-                <button type="button" class="btn btn-outline-danger" (click)="discardTask(i)">
-                  <i class="bi bi-x"></i>
-                </button>
-              </div>
-            </div>
-          </app-list-item>
-        </li>
-      }
-      @empty {
-        <li>
-          <app-list-item>
-            <div class="d-flex justify-content-center align-items-center">
-              <span class="text-muted">
-                No se pudieron generar tareas a partir de la descripción. Por favor, intenta con otra.
-              </span>
-            </div>
-          </app-list-item>
-        </li>
-      }
-    </ul>
+  <ul class="d-flex flex-column list-unstyled">
+    @for (item of generatedTasks; track i; let i = $index; let first = $first; let last = $last) {
+    <li>
+      <app-list-item [isFirst]="first" [isLast]="last">
+        <div class="d-flex flex-column justify-content-between align-items-center gap-3">
+          <div class="d-flex justify-content-start w-100">
+            <div class="text-truncate">{{ item }}</div>
+          </div>
+          <div class="d-flex gap-3">
+            <button type="button" class="btn btn-outline-primary" (click)="saveTask(i)">
+              <i class="bi bi-check"></i>
+            </button>
+            <button type="button" class="btn btn-outline-danger" (click)="discardTask(i)">
+              <i class="bi bi-x"></i>
+            </button>
+          </div>
+        </div>
+      </app-list-item>
+    </li>
+    }
+    @empty {
+    <li>
+      <app-list-item>
+        <div class="d-flex justify-content-center align-items-center">
+          <span class="text-muted">
+            No se pudieron generar tareas a partir de la descripción. Por favor, intenta con otra.
+          </span>
+        </div>
+      </app-list-item>
+    </li>
+    }
+  </ul>
   }
 
 </div>
