--- a/src/app/features/tasks/pages/task-detail/task-detail.component.html
+++ b/src/app/features/tasks/pages/task-detail/task-detail.component.html
@@ -40,6 +40,9 @@
         <div>{{ task.description }}</div>
       </div>
     </div>
+    @if (isAIEnabled | async) {
+      <app-task-suggestion [task]="task" class="mt-3" />
+    }
   }
   @else {
     <div class="d-flex justify-content-center align-items-center">
