feat: update task detail

--- a/src/app/features/tasks/pages/task-detail/task-detail.component.html
+++ b/src/app/features/tasks/pages/task-detail/task-detail.component.html
@@ -40,7 +40,7 @@
         <div>{{ task.description }}</div>
       </div>
     </div>
-    @if (isAIEnabled | async) {
+    @if (!task.completed && (isAIEnabled | async)) {
       <app-task-suggestion [task]="task" class="mt-3" />
     }
   }
